--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -44,8 +44,12 @@ jobs:
     steps:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.15.6"
-        with:
-          label: 'automerge'
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          MERGE_LABELS: "automerge"
+          MERGE_COMMIT_MESSAGE: "pull-request-description"
+          MERGE_RETRIES: "6"
+          MERGE_RETRY_SLEEP: "10000"
+          MERGE_REQUIRED_APPROVALS: "0"
+          LOG: "TRACE"
           
