--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -38,11 +38,11 @@ jobs:
           coverage run -m unittest tests/test_persona.py
           coverage report -m
   automerge:
-    name: Automerge
     needs: job1
     runs-on: ubuntu-latest
     steps:
-      - name: automerge
+      - id: automerge
+        name: automerge
         uses: "pascalgn/automerge-action@v0.15.6"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
