--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-latest]
     steps:
     - name: Checkout de repositorio
       uses: actions/checkout@v2
@@ -40,14 +40,18 @@ jobs:
   automerge:
     needs: job1
     runs-on: ubuntu-latest
+    if: |
+      contains(github.event.pull_request.labels.*.name, 'auto-merge') && github.event.pull_request.draft == false
     steps:
       - id: automerge
         name: automerge
         uses: "pascalgn/automerge-action@v0.15.6"
         env:
           GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-          MERGE_LABELS: "automerge"
-          MERGE_COMMIT_MESSAGE: "pull-request-description"
+          MERGE_LABELS: "auto-merge"
+          UPDATE_LABELS: "auto-merge"
+          MERGE_COMMIT_MESSAGE: "pull-request-title-and-description"
+          MERGE_METHOD: "squash"
           MERGE_RETRIES: "3"
           MERGE_RETRY_SLEEP: "10000"
           MERGE_REQUIRED_APPROVALS: "0"
