--- a/.github/workflows/pull-requests.yml
+++ b/.github/workflows/pull-requests.yml
@@ -39,6 +39,10 @@ jobs:
           coverage report -m
   automerge:
     needs: job1
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+      issues: 'write' #__This fixed the HttpError: Resource not accessible by integration
     runs-on: ubuntu-latest
     steps:
       - id: automerge
