--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -7,7 +7,7 @@ jobs:
   job1:
     name: Pruebas
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref, "integration") }}
+    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref, 'integration') }}
         echo "RAMA INVOCADA ----> ${{ github.ref }}"
     steps:
     - name: Checkout de repositorio
