--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -7,9 +7,12 @@ jobs:
   job1:
     name: Pruebas
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref, "integration") }}
-        echo "RAMA INVOCADA ----> ${{ github.ref }}"
+    if: |
+     ${{ contains(github.event.head_commit.message, '(Azul)')}}
+     1 == 1
     steps:
+    - name: Printing variables
+      run: echo "RAMA INVOCADA ----> ${{ github.ref }}"
     - name: Checkout de repositorio
       uses: actions/checkout@v3
     - name: Configuración de entorno de python
