--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -8,7 +8,7 @@ jobs:
     name: Pruebas
     runs-on: ubuntu-latest
     if: |
-     ${{ contains(github.event.head_commit.message, '(Verde)')}}
+     ${{ contains(github.event.head_commit.message, '(Azul)')}}
     steps:
     - name: Printing variables
       run: echo "RAMA INVOCADA ----> ${{ github.ref }}"
@@ -32,4 +32,14 @@ jobs:
       run: |
           coverage run -m unittest tests/*.py
           coverage report -m
-          
+           
+  automerge:
+    needs: job1
+    runs-on: ubuntu-latest
+    steps:
+     - name: Mezcla ${{ github.ref }} -> develop
+       uses: tukasz/direct-merge-action@master
+       with:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         source-branch: ${{ github.ref }}
+         target-branch: develop
