--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -35,6 +35,7 @@ jobs:
            
   automerge:
     needs: job1
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
      - name: Mezcla ${{ github.ref }} -> develop
