--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -7,8 +7,8 @@ jobs:
   job1:
     name: Pruebas
     runs-on: ubuntu-latest
-    if: |
-     ${{ contains(github.event.head_commit.message, '(Azul)')}}
+    if: ${{ endsWith(github.event.head_commit.message, '(Azul)') && contains(github.ref,'integration') }}
+     
     steps:
     - name: Printing variables
       run: echo "RAMA INVOCADA ----> ${{ github.ref }}"
