--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -24,12 +24,11 @@ jobs:
     - name: Correr pruebas
       id: correr-pruebas
       run: |
-        python -m unittest -v tests/test_persona.py
-        python -m unittest -v tests/test_perro.py
+        python -m unittest -v 
     - name:  Cubrimiento personalizado
       id: cubrimiento
       run: |
-          coverage run -m unittest tests/*.py
+          coverage run -m unittest 
           coverage report -m
            
   automerge:
