--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -38,7 +38,7 @@ jobs:
     needs: job1
     permissions: write-all
     runs-on: ubuntu-latest
-    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref,'integration') && !endsWith(github.event.head_commit.message, '[ready_to_merge]')}}
+    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref,'integration') && !endsWith(github.ref,'[release]')}}
     steps:
      - name: Mezcla ${{ github.ref }} -> develop
        uses: tukasz/direct-merge-action@master
@@ -52,12 +52,13 @@ jobs:
     needs: job1
     permissions: write-all
     runs-on: ubuntu-latest
-    if: ${{ endsWith(github.event.head_commit.message, '[ready_to_merge]') && contains(github.ref,'integration') }}
+    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref,'integration') && endsWith(github.ref,'[release]')}}
     steps:
-     - name: Mezcla ${{ github.ref }} -> develop y prepara release
+     - name: Mezcla ${{ github.ref }} -> develop
        uses: tukasz/direct-merge-action@master
        with:
          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
          source-branch: ${{ github.ref }}
          target-branch: develop
-         commit-message: "Se actualiza develop con la rama ${{ github.ref }}. Develop is ready to merge in main!"
+         commit-message: "Se actualiza develop con la rama ${{ github.ref }}. Listo para liberar [release]"
+         
