--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -62,3 +62,8 @@ jobs:
          target-branch: develop
          commit-message: "Se actualiza develop con la rama ${{ github.ref }}. Listo para liberar [release]"
          
+     - name: Sleep for 10s
+       uses: juliangruber/sleep-action@v1
+       with:
+         time: 10s
+         
