--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,7 @@ jobs:
     - name: Imprimir mensajes
       run: |
         echo "COMMIT MENSAJE ----> ${{ github.event.head_commit.message }}"
-        echo EVENT ----> ${{ github.event }}"
+        echo "EVENT ----> ${{ github.event }}"
         
   release:
    permissions: write-all
