--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -62,8 +62,11 @@ jobs:
          target-branch: develop
          commit-message: "Listo para liberar [release]"
          
-     - name: Sleep for 10s
+     - name: Sleep for 4s
        uses: juliangruber/sleep-action@v1
        with:
-         time: 10s
+         time: 4s
+         
+     - name: Release workflow
+       uses: fanpay/git_actions/.github/workflows/release.yml@main
          
