--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -4,6 +4,7 @@ on:
      branches:
          - 'testing_**'
 jobs:
+
   pruebas:
     name: Pruebas
     runs-on: ${{ matrix.os }}
@@ -22,6 +23,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: Actualizar repo
+      id: actualizar-repo
+      run: |
+        git pull origin develop
     - name: Correr pruebas
       id: correr-pruebas
       run: |
