--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -23,10 +23,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Actualizar repo
-      id: actualizar-repo
-      run: |
-        git pull origin develop
+    - name: Mezcla develop -> ${{ github.ref }}
+      uses: tukasz/direct-merge-action@master
+      with:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         source-branch: develop
+         target-branch: ${{ github.ref }}
+         commit-message: "Se realiza merge de develop en ${{ github.ref }}"
     - name: Correr pruebas
       id: correr-pruebas
       run: |
