--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,7 @@ jobs:
    runs-on: ${{ matrix.os }}
    strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [macos-latest]
    if: ${{ endsWith(github.event.head_commit.message, '[release]') }}
    steps:
     - name: Checkout de repositorio
@@ -38,7 +38,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [macos-latest, windows-latest]
+        os: [macos-latest]
     steps:     
     - name: Checkout de repositorio
       uses: actions/checkout@v3
@@ -68,6 +68,13 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         source-branch: ${{inputs.release_version}}
         target-branch: main
-        commit-message: "Se integra rama ${{inputs.release_version}} en main. Integración lista"
+        commit-message: "Se integra rama ${{inputs.release_version}} en main. Rama main actualizada"
+    - name: Mezcla release -> develop
+      uses: tukasz/direct-merge-action@master
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        source-branch: ${{inputs.release_version}}
+        target-branch: develop
+        commit-message: "Se integra rama ${{inputs.release_version}} en develop. Rama develop actualizada"
            
     
