--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -5,6 +5,40 @@ on:
          - 'testing_**'
 jobs:
 
+  generate:
+    name: Generando version
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [macos-latest]
+    steps:
+      - uses: actions/checkout@v3
+      - name: 'Get Previous tag'
+        id: previoustag
+        uses: "WyriHaximus/github-action-get-previous-tag@master"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - name: 'Get next minor version'
+        id: semvers
+        uses: "WyriHaximus/github-action-next-semvers@master"
+        with:
+          version: ${{ steps.previoustag.outputs.tag }}
+      - name: 'Create new milestone'
+        id: createmilestone
+        uses: "WyriHaximus/github-action-create-milestone@master"
+        with:
+          title: ${{ steps.semvers.outputs.r_version }}
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          
+      - name: print VERSIONS
+        run: |
+          echo "PREVIOUS TAG ${{ steps.previoustag.outputs.tag }}"
+          echo "SEMVERS_R PREV TAG ${{ steps.semvers.outputs.r_version }}"
+          echo "SEMVERS_V_PATCH PREV TAG ${{ steps.semvers.outputs.v_patch }}"
+          echo "SEMVERS_V_MINOR PREV TAG ${{ steps.semvers.outputs.v_minor }}"
+          echo "SEMVERS_V_MAJOR PREV TAG ${{ steps.semvers.outputs.v_major }}"
+
   pruebas:
     name: Pruebas
     permissions: write-all
