--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -12,29 +12,37 @@ jobs:
       matrix:
         os: [ubuntu-latest]
     steps:
-      - uses: actions/checkout@v3
-      - name: 'Get Previous tag'
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # required for github-action-get-previous-tag
+
+      - name: Get Previous tag
         id: previoustag
-        uses: "WyriHaximus/github-action-get-previous-tag@master"
+        uses: 'WyriHaximus/github-action-get-previous-tag@v1'
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
-      - name: 'Get next minor version'
-        id: semvers
-        uses: "WyriHaximus/github-action-next-semvers@v1.2"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Get next version
+        id: next
+        uses: 'WyriHaximus/github-action-next-release-version@1.0.0'
         with:
           version: ${{ steps.previoustag.outputs.tag }}
-      - name: 'Create new milestone'
-        id: createmilestone
-        uses: "WyriHaximus/github-action-create-milestone@master"
+
+      - name: 'Get next minor version'
+        id: semvers
+        uses: "WyriHaximus/github-action-next-semvers@v1"
         with:
-          title: ${{ steps.semvers.outputs.r_version }}
-        env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          version: ${{ steps.previoustag.outputs.tag }}
           
       - name: print VERSIONS
         run: |
           echo "PREVIOUS TAG ${{ steps.previoustag.outputs.tag }}"
           echo "SEMVERS_R PREV TAG ${{ steps.semvers.outputs.r_version }}"
+          
+          echo "VERSION PREV TAG ${{ steps.next.outputs.version }}"
+          echo "R_VERSION PREV TAG ${{ steps.next.outputs.r_version }}"
+          
           echo "SEMVERS_V_PATCH PREV TAG ${{ steps.semvers.outputs.v_patch }}"
           echo "SEMVERS_V_MINOR PREV TAG ${{ steps.semvers.outputs.v_minor }}"
           echo "SEMVERS_V_MAJOR PREV TAG ${{ steps.semvers.outputs.v_major }}"
