--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -3,6 +3,10 @@ on:
  push:
      branches:
          - 'testing_**'
+env:
+  RELEASE_VERSION: '1.0.0'
+  RELEASE_TAG: 'v1.0.0'
+  
 jobs:
 
   tests:
@@ -83,6 +87,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
+    outputs:
+      release_version: ${{ steps.step1.outputs.myoutput }}
+      release_tag: ${{ steps.step1.outputs.myoutput }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
