--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -15,7 +15,9 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-
+    outputs:
+      release_version: ${{ steps.setting_version.outputs.RELEASE_VERSION }}
+      release_tag: ${{ steps.setting_version.outputs.RELEASE_TAG }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -56,11 +58,20 @@ jobs:
         run: |
           echo "RELEASE_VERSION=${{ steps.semvers.outputs.patch }}" >> $GITHUB_ENV
           echo "RELEASE_TAG=${{ steps.semvers.outputs.v_patch }}" >> $GITHUB_ENV
-          
+      
+      - name: Setting GLOBAL version
+        id: setting_version
+        run: |
+            echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
+            echo "RELEASE_TAG=${{ env.RELEASE_TAG }}" >> $GITHUB_OUTPUT
+            
       - name: Printing
         run: |
-          echo "RELEASE_VERSION -> ${{ env.RELEASE_VERSION }}" 
-          echo "RELEASE_TAG -> ${{ env.RELEASE_TAG }}" 
+          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
+          echo "RELEASE_TAG=${{ env.RELEASE_TAG }}" >> $GITHUB_OUTPUT
+          
+          echo "RELEASE_TAG_OUTPUT: ${{ steps.setting_version.outputs.RELEASE_TAG }}"
+          echo "RELEASE_VERSION_OUTPUT: ${{ steps.setting_version.outputs.RELEASE_VERSION }}"
 
 
 
