--- a/.github/workflows/integration_dev.yml
+++ b/.github/workflows/integration_dev.yml
@@ -5,12 +5,80 @@ on:
          - 'testing_**'
          
 jobs:
-
-
+  tests:
+    name: Pruebas
+    permissions: write-all
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref,'integration') }}
+    steps:
+    - name: Checkout de repositorio
+      uses: actions/checkout@v3
+    - name: Configuración de entorno de python
+      uses: actions/setup-python@v4
+      with:
+          python-version: '3.9'
+    - name: Instalación de librerías y dependencias
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    - name: Mezcla develop -> ${{ github.ref }}
+      uses: tukasz/direct-merge-action@master
+      with:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         source-branch: develop
+         target-branch: ${{ github.ref }}
+         commit-message: "Se realiza merge de develop en ${{ github.ref }}"
+    - name: Correr pruebas
+      id: correr-pruebas
+      run: |
+        python -m unittest -v 
+    - name:  Cubrimiento personalizado
+      id: cubrimiento
+      run: |
+          coverage run -m unittest 
+          coverage report -m
+           
+  automerge:
+    needs: tests
+    permissions: write-all
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    if: ${{ !contains(github.event.head_commit.message,'[release]')}}
+    steps:
+     - name: Mezcla ${{ github.ref }} -> develop
+       uses: tukasz/direct-merge-action@master
+       with:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         source-branch: ${{ github.ref }}
+         target-branch: develop
+         commit-message: "Se realiza merge de la ${{ github.ref }} en develop"
+         
+  prepare_release:
+    name: Preparar release
+    needs: tests
+    permissions: write-all
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest]
+    if: ${{ contains(github.event.head_commit.message,'[release]')}}
+    steps:
+     - name: Mezcla ${{ github.ref }} -> develop
+       uses: tukasz/direct-merge-action@master
+       with:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+         source-branch: ${{ github.ref }}
+         target-branch: develop
+         commit-message: "Merge completo. Listo para crear [release]"
+         
   generate_version:
-    name: Generando version
-    
-     
+    name: Generar versión
+    needs: prepare_release
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -19,16 +87,16 @@ jobs:
       release_version: ${{ steps.setting_version.outputs.RELEASE_VERSION }}
       release_tag: ${{ steps.setting_version.outputs.RELEASE_TAG }}
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          
       - name: Checking tag version
         if: ${{ !contains(github.event.head_commit.message,'[major]')  &&  !contains(github.event.head_commit.message,'[minor]')  &&  !contains(github.event.head_commit.message,'[patch]')}}
         run: |
           echo "Versión no encontraba. Intenta agregar la etiqueta [minor] ó [major] ó [path] de acuerdo al tipo de versión que se desee liberar. Se finaliza job con fallos y no se genera versión"
           exit 1
+          
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
 
       - name: Get Previous tag
         id: previoustag
@@ -65,94 +133,10 @@ jobs:
             echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
             echo "RELEASE_TAG=${{ env.RELEASE_TAG }}" >> $GITHUB_OUTPUT
             
-      - name: Printing
-        run: |
-          echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
-          echo "RELEASE_TAG=${{ env.RELEASE_TAG }}" >> $GITHUB_OUTPUT
-          
-          echo "RELEASE_TAG_OUTPUT: ${{ steps.setting_version.outputs.RELEASE_TAG }}"
-          echo "RELEASE_VERSION_OUTPUT: ${{ steps.setting_version.outputs.RELEASE_VERSION }}"
-
-
-
-
-
-  tests:
-    name: Pruebas
-    permissions: write-all
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-    if: ${{ contains(github.event.head_commit.message, '(Azul)') && contains(github.ref,'integration') }}
-    steps:
-    - name: Checkout de repositorio
-      uses: actions/checkout@v3
-    - name: Configuración de entorno de python
-      uses: actions/setup-python@v4
-      with:
-          python-version: '3.9'
-    - name: Instalación de librerías y dependencias
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Mezcla develop -> ${{ github.ref }}
-      uses: tukasz/direct-merge-action@master
-      with:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         source-branch: develop
-         target-branch: ${{ github.ref }}
-         commit-message: "Se realiza merge de develop en ${{ github.ref }}"
-    - name: Correr pruebas
-      id: correr-pruebas
-      run: |
-        python -m unittest -v 
-    - name:  Cubrimiento personalizado
-      id: cubrimiento
-      run: |
-          coverage run -m unittest 
-          coverage report -m
-           
-  automerge:
-    needs: tests
-    permissions: write-all
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-    if: ${{ !contains(github.event.head_commit.message,'[release]')}}
-    steps:
-     - name: Mezcla ${{ github.ref }} -> develop
-       uses: tukasz/direct-merge-action@master
-       with:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         source-branch: ${{ github.ref }}
-         target-branch: develop
-         commit-message: "Se realiza merge de la ${{ github.ref }} en develop"
-         
-  prepare_release:
-    needs: tests
-    permissions: write-all
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-    if: ${{ contains(github.event.head_commit.message,'[release]')}}
-    steps:
-     - name: Mezcla ${{ github.ref }} -> develop
-       uses: tukasz/direct-merge-action@master
-       with:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-         source-branch: ${{ github.ref }}
-         target-branch: develop
-         commit-message: "Merge completo. Listo para crear [release]"
-         
-  
 
   invoke_workflow:
     needs: [prepare_release, generate_version]
     permissions: write-all
-    if: ${{ contains(github.event.head_commit.message,'[release]')}}   
     uses: fanpay/git_actions/.github/workflows/release.yml@main
     with:
       release_version: ${{ needs.generate_version.outputs.release_version }}
